tests/neg-custom-args/captures/i16226.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i16226.scala:13:27 ---------------------------------------
13 |    (ref1, f1) => map[A, B](ref1, f1) // error
   |                  ^^^^^^^^^^^^^^^^^^^
   |Found:    LazyRef[B]^{f1, ref1}
   |Required: LazyRef[B]^{any}
   |
   |Note that capability `f1` cannot flow into capture set {any}
   |because (f1 : A => B) in an enclosing function is not visible from any in method mapc.
   |
   |where:    =>    refers to a root capability created in anonymous function of type (ref1²: LazyRef[A]^{io}, f1²: A => B): LazyRef[B]^ of parameter parameter f1 of method $anonfun
   |          any   is a root capability in the result type of method mapc
   |          ^     refers to the root capability caps.any
   |          f1    is a parameter in an anonymous function in method mapc
   |          f1²   is a reference to a value parameter
   |          ref1  is a parameter in an anonymous function in method mapc
   |          ref1² is a reference to a value parameter
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i16226.scala:15:27 ---------------------------------------
15 |    (ref1, f1) => map[A, B](ref1, f1) // error
   |                  ^^^^^^^^^^^^^^^^^^^
   |Found:    LazyRef[B]^{f1, ref1}
   |Required: LazyRef[B]^{any}
   |
   |Note that capability `f1` cannot flow into capture set {any}
   |because (f1 : A => B) in an enclosing function is not visible from any in method mapd.
   |
   |where:    =>    refers to a root capability created in anonymous function of type (ref1²: LazyRef[A]^{io}, f1²: A => B): LazyRef[B]^ of parameter parameter f1 of method $anonfun
   |          any   is a root capability in the result type of method mapd
   |          ^     refers to the root capability caps.any
   |          f1    is a parameter in an anonymous function in method mapd
   |          f1²   is a reference to a value parameter
   |          ref1  is a parameter in an anonymous function in method mapd
   |          ref1² is a reference to a value parameter
   |
   | longer explanation available when compiling with `-explain`
